[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/KawaiiIcons_NoBG013.png" type="Texture" id=1]
[ext_resource path="res://assets/KawaiiIcons_NoBG012.png" type="Texture" id=2]
[ext_resource path="res://assets/KawaiiIcons_NoBG014.png" type="Texture" id=3]
[ext_resource path="res://assets/KawaiiIcons_NoBG011.png" type="Texture" id=4]
[ext_resource path="res://GUI.gd" type="Script" id=5]
[ext_resource path="res://assets/KawaiiIcons_NoBG029.png" type="Texture" id=6]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = SubResource( 2 )

[node name="GUI" type="GridContainer"]
pause_mode = 2
anchor_right = 1.0
margin_bottom = 600.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="HBoxContainer" parent="."]
margin_right = 385.0
margin_bottom = 78.0

[node name="Arrows" type="HBoxContainer" parent="HUD"]
margin_right = 268.0
margin_bottom = 78.0

[node name="UpArrow" type="TextureRect" parent="HUD/Arrows"]
margin_right = 64.0
margin_bottom = 78.0
texture = ExtResource( 4 )

[node name="DownArrow" type="TextureRect" parent="HUD/Arrows"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 78.0
texture = ExtResource( 3 )

[node name="LeftArrow" type="TextureRect" parent="HUD/Arrows"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 78.0
texture = ExtResource( 2 )

[node name="RightArrow" type="TextureRect" parent="HUD/Arrows"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 78.0
texture = ExtResource( 1 )

[node name="Score" type="HBoxContainer" parent="HUD"]
margin_left = 272.0
margin_right = 385.0
margin_bottom = 78.0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="HUD/Score"]
margin_right = 64.0
margin_bottom = 78.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="HUD/Score"]
margin_left = 68.0
margin_right = 113.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="MsgContainer" type="CenterContainer" parent="."]
margin_top = 82.0
margin_right = 385.0
margin_bottom = 82.0

[node name="Message" type="Label" parent="MsgContainer"]
visible = false
margin_left = 70.0
margin_top = -25.0
margin_right = 314.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "Game over!"
align = 1
